--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -27,6 +27,86 @@ summary {
   display: block;
 }
 
+
+
+
+
+/*###########################################*/
+/*newly added items start faded out and translated 400px upwards on the y-axis*/
+li.new-item {
+  opacity: 0;
+  animation: new-item-animation .3s linear forwards;
+}
+ 
+@keyframes new-item-animation {
+  from {
+    opacity: 0;
+    transform: translateY(-400px);
+  }
+ 
+  to {
+    opacity: 1;
+    transform : translateY(0);
+  }
+}
+
+li.removed-item {
+  animation: removed-item-animation 1s cubic-bezier(0.55, -0.04, 0.91, 0.94) forwards;
+  /*transform origin is moved to the bottom left corner*/
+  transform-origin: 0% 100%;
+}
+ 
+@keyframes removed-item-animation {
+  0% {
+    opacity: 1;
+    transform: rotateZ(0);
+  }
+ 
+  100% {
+    opacity: 0;
+    transform: translateY(600px) rotateZ(90deg);
+  }
+}
+
+/*the initial state in this animation is same as the final state of the above one*/
+li.restored-item {
+  animation: 
+    openspace 0.3s ease forwards, 
+    restored-item-animation 0.3s 0.3s cubic-bezier(0, 0.8, 0.32, 1.07) forwards;
+}
+/*
+  Snippet @keyframe openspace source: http://css-tricks.com/transitional-interfaces-coded/
+*/
+@keyframes openspace {
+  to {
+    height: auto;
+  }
+}
+ 
+@keyframes restored-item-animation {
+  0% {
+    opacity: 0;
+    transform: translateY(600px) rotateZ(90deg);
+  }
+ 
+  10% {
+    opacity: 1;
+    transform: translateY(600px) rotateZ(90deg);
+  }
+ 
+  100% {
+    opacity: 1;
+    transform: rotateZ(0);
+  }
+}
+
+
+
+
+
+
+
+
 /* line 32, ../../app/bower_components/sass-bootstrap/lib/_normalize.scss */
 
 audio,
