--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -17,7 +17,7 @@
 
 
 
-/*###########################################*/
+/*# # # ANIMATIONS BEGIN # # #*/
 @import "http://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css";
 @import url(http://fonts.googleapis.com/css?family=Lato:300,100,400);
 
